--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <nav id="sidebar">
 
         <div class="sidebar-header">
-            <h3>Directions</h3>
+            <h3>appname</h3>
         </div>
         <ul class="lisst-unstyled components">
-            <p>Where to go?</p>
+            <h2>Where to?</h2>
             <li class="active">
                 <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Home</a>
                 <ul class="collapse lisst-unstyled" id="homeSubmenu">
@@ -48,13 +48,13 @@
                 <a href="#bubbleTeaMenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Bubble Tea</a>
                 <ul class="collapse lisst-unstyled" id="bubbleTeaMenu">
                     <li>
-                        <a href="#">all</a>
+                        <a href="bubbletea.html">all</a>
                     </li>
                     <li>
-                        <a href="#">brands</a>
+                        <a href="bubbletea.html">brands</a>
                     </li>
                     <li>
-                        <a href="#">near me</a>
+                        <a href="bubbletea.html">near me</a>
                     </li>
                 </ul>
             </li>
@@ -64,13 +64,13 @@
                 <a href="#atmMenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">ATM</a>
                 <ul class="collapse lisst-unstyled" id="atmMenu">
                     <li>
-                        <a href="#">all</a>
+                        <a href="atm.html">all</a>
                     </li>
                     <li>
-                        <a href="#">brands</a>
+                        <a href="atm.html">brands</a>
                     </li>
                     <li>
-                        <a href="#">near me</a>
+                        <a href="atm.html">near me</a>
                     </li>
                 </ul>
             </li>
@@ -78,13 +78,13 @@
                 <a href="#cafeMenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Cafes</a>
                 <ul class="collapse lisst-unstyled" id="cafeMenu">
                     <li>
-                        <a href="#">all</a>
+                        <a href="cafe.html">all</a>
                     </li>
                     <li>
-                        <a href="#">brands</a>
+                        <a href="cafe.html">brands</a>
                     </li>
                     <li>
-                        <a href="#">near me</a>
+                        <a href="cafe.html">near me</a>
                     </li>
                 </ul>
             </li>
@@ -94,13 +94,13 @@
                 <a href="#studyMenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Study Spots</a>
                 <ul class="collapse lisst-unstyled" id="studyMenu">
                     <li>
-                        <a href="#">all</a>
+                        <a href="study.html">all</a>
                     </li>
                     <li>
-                        <a href="#">brands</a>
+                        <a href="study.html">brands</a>
                     </li>
                     <li>
-                        <a href="#">near me</a>
+                        <a href="study.html">near me</a>
                     </li>
                 </ul>
             </li>
@@ -113,8 +113,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
                 <button type="button" id="sidebarCollapse" class="btn btn-info">
-                    <i class="fas fa-align-left"></i>
-                    <span>Toggle sidebar</span>
+                    <i class="fas fa-bars"></i>
                 </button>
             </div>
         </nav>
