--- a/extra.html
+++ b/extra.html
@@ -1,47 +1,100 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <title>Geolocation</title>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyArVX2Pdi9UKawedXyJ8UBAJxU7QPCFFxw&callback=initMap&libraries=&v=weekly"
+      defer
+    ></script>
+    <style type="text/css">
+      /* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+      #map {
+        height: 100%;
+      }
+
+      /* Optional: Makes the sample page fill the window. */
+      html,
+      body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+
+      .custom-map-control-button {
+        appearance: button;
+        background-color: #fff;
+        border: 0;
+        border-radius: 2px;
+        box-shadow: 0 1px 4px -1px rgba(0, 0, 0, 0.3);
+        cursor: pointer;
+        margin: 10px;
+        padding: 0 0.5em;
+        height: 40px;
+        font: 400 18px Roboto, Arial, sans-serif;
+        overflow: hidden;
+      }
+      .custom-map-control-button:hover {
+        background: #ebebeb;
+      }
+    </style>
+    <script>
+      // Note: This example requires that you consent to location sharing when
+      // prompted by your browser. If you see the error "The Geolocation service
+      // failed.", it means you probably did not give permission for the browser to
+      // locate you.
+      let map, infoWindow;
+
+      function initMap() {
+        map = new google.maps.Map(document.getElementById("map"), {
+          center: { lat: 1.3521, lng: 103.8198 },
+          zoom: 14,
+        });
+        infoWindow = new google.maps.InfoWindow();
+        const locationButton = document.createElement("button");
+        locationButton.textContent = "Pan to Current Location";
+        locationButton.classList.add("custom-map-control-button");
+        map.controls[google.maps.ControlPosition.TOP_CENTER].push(
+          locationButton
+        );
+        locationButton.addEventListener("click", () => {
+          // Try HTML5 geolocation.
+          if (navigator.geolocation) {
+            navigator.geolocation.getCurrentPosition(
+              (position) => {
+                const pos = {
+                  lat: position.coords.latitude,
+                  lng: position.coords.longitude,
+                };
+                infoWindow.setPosition(pos);
+                infoWindow.setContent("Location found.");
+                infoWindow.open(map);
+                map.setCenter(pos);
+              },
+              () => {
+                handleLocationError(true, infoWindow, map.getCenter());
+              }
+            );
+          } else {
+            // Browser doesn't support Geolocation
+            handleLocationError(false, infoWindow, map.getCenter());
+          }
+        });
+      }
+
+      function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+        infoWindow.setPosition(pos);
+        infoWindow.setContent(
+          browserHasGeolocation
+            ? "Error: The Geolocation service failed."
+            : "Error: Your browser doesn't support geolocation."
+        );
+        infoWindow.open(map);
+      }
+    </script>
   </head>
   <body>
-    <div id="dialog">
-    <div>Your latitude is: <span id="lat"></span></div>
-    <div>Your longitude is: <span id="lon"></span></div>
-    <div>Last Updated: <small id="last_updated"></small></div>
-</div>
-    <script>
-        window.onload = function () {
-    var latElement = document.getElementById("lat"),
-        lonElement = document.getElementById("lon"),
-        lastUpdatedElement = document.getElementById("last_updated"),
-        getPositionOptions = {
-            enableHighAccuracy: false,
-            timeout: 10000,
-            maximumAge: 0
-        },
-        getPos = function () {
-            console.log("getPos function called");
-            navigator.geolocation.getCurrentPosition(function (position) {
-                console.log("Successfully retrieved position: ", position);
-                var coords = position.coords;
-
-                latElement.innerHTML = coords.latitude;
-                lonElement.innerHTML = coords.longitude;
-
-                lastUpdatedElement.innerHTML = new Date(position.timestamp);
-                setTimeout(getPos, 5000);
-            }, function (error) {
-                console.log("Something went wrong retrieving position: ", error);
-                setTimeout(getPos, 5000);
-            }, getPositionOptions);
-        };
-
-    getPos();
-};
-
-console.log(latElement,lonElement)
-    </script>
+    <div id="map"></div>
   </body>
 </html>
