--- a/forgot.html
+++ b/forgot.html
@@ -44,6 +44,10 @@ body, input {
         </form>
       </div>
     </div>
+    <div class="panels-container">
+      <div class="panel left-panel">
+        <img src="svg file/forgot.svg" class="image" alt="" />
+      </div>
   </div>
   <script>
 
