--- a/test.html
+++ b/test.html
@@ -19,6 +19,8 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyArVX2Pdi9UKawedXyJ8UBAJxU7QPCFFxw&callback=initMap&libraries=localContext&v=beta"
       defer
     ></script>
+    
+    <p id="demo"></p>
     <div id="map"></div>
     <div class="popup center">
       <div class="icon">
