--- a/login.html
+++ b/login.html
@@ -87,6 +87,19 @@ body, input {
     </div>
   </div>
   <script>
+    // Change from Sign-in to Sign-up
+    const sign_in_btn = document.querySelector("#sign-in-btn");
+    const sign_up_btn = document.querySelector("#sign-up-btn");
+    const container = document.querySelector(".container");
+
+    sign_up_btn.addEventListener("click", () => {
+      container.classList.add("sign-up-mode");
+    });
+
+    sign_in_btn.addEventListener("click", () => {
+      container.classList.remove("sign-up-mode");
+    });
+
   // SAVING DATA: 
 
   function addUsername() {
@@ -132,6 +145,5 @@ body, input {
 
   });
   </script>
-  <script src="login.js"></script>
 </body>
 </html>
