Basics of chat application 5/1/2021

--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@ section{
                             <div class="dropdown">
                                 <ul>
                                     <li class="dropdown-link">
-                                        <a href="profile.html">Profile</a>
+                                        <a href="message.html">Messaging</a>
                                     </li>
                                     <li class="dropdown-link">
                                         <a href="leaderboard.html">Leaderboard</a>
