--- a/message.html
+++ b/message.html
@@ -6,12 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Messaging Form </title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+
+
 </head>
 
 <body>
+<!-- create a form to send message -->
+<form onsubmit="return sendMessage();">
+  <input id="message" placeholder="Write something..."  autocomplete="off">
+
+  <input type="submit" value="send">
+  <input id="find-friends" type="button" value="FIND FRIENDS">
+</form>
+
+<!-- create a list -->
+<ul id="messages"></ul>
+<tbody id="userLocationContent">             
+</tbody>
+
+
+
 <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
+
+<!-- include firebase firestore -->
+<script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-firestore.js"></script>
 
 <!-- include firebase database -->
 <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-database.js"></script>
@@ -19,81 +40,16 @@
      https://firebase.google.com/docs/web/setup#available-libraries -->
 <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-analytics.js"></script>
 
-<script>
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  var firebaseConfig = {
-    apiKey: "AIzaSyAdho8t20YPQm4bKDGQjih337UbqxZFa6A",
-    authDomain: "chat-messaging-api.firebaseapp.com",
-    projectId: "chat-messaging-api",
-    storageBucket: "chat-messaging-api.appspot.com",
-    messagingSenderId: "218119553113",
-    appId: "1:218119553113:web:0a87c4ad307f6a9d703148",
-    measurementId: "G-SK5XCD5DCY"
-  };
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
 
-
-  var myName = localStorage.getItem("name");
-  function sendMessage(){
-    //get message
-    var message = document.getElementById("message").value;
-
-    //save in database
-    firebase.database().ref("messages").push().set({
-      "sender": myName,
-      "message": message
-    });
-
-    // prevent form from submitting 
-    return false;
-  }
-
-  // listen for incoming messages
-  firebase.database().ref("messages").on("child_added", function (snapshot){
-    var html = "";
-    // give each message a unique ID
-    html += "<li id='message-" + snapshot.key + "'>";
-      // show delete button if message is sent by me
-      if (snapshot.val().sender == myName){
-        html += "<button data-id='" + snapshot.key + "' onclick='deleteMessage(this);'>"
-          ;
-          html += "Delete";
-        html += "</button>";
-      }
-      html += snapshot.val().sender + ": " + snapshot.val().message;
-    html += "</li>";
-
-    document.getElementById("messages").innerHTML += html;
-  });
-
-  function deleteMessage(self){
-    // get message ID
-    var messageId = self.getAttribute("data-id");
-
-    // delete message 
-    firebase.database().ref("messages").child(messageId).remove();
-  }
-
-  // attach listener for deleted message 
-  firebase.database().ref("messages").on("child_removed", function (snapshot){
-    // remove message node 
-    document.getElementById("message-" + snapshot.key).innerHTML = "This message has been deleted.";
-  });
-  
-</script>
-
-<!-- create a form to send message -->
-<form onsubmit="return sendMessage();">
-  <input id="message" placeholder="Enter message" autocomplete="off">
-
-  <input type="submit" value="send">
-</form>
-
-<!-- create a list -->
-<ul id="messages"></ul>
-
+<script src="https://code.jquery.com/jquery-3.5.0.min.js"
+integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+crossorigin="anonymous"></script>
+<script src="messaging.js"></script>
 </body>
 
 </html>
