--- a/west_challenge.html
+++ b/west_challenge.html
@@ -3,20 +3,38 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Local Context Styles</title>
+    <title>West Challenge Map</title>
     <link rel= "stylesheet" href= "https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
     crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
     <link rel = "stylesheet" href="teststyle.css" >
   </head>
+  <style> 
+  html{
+      height: 100%;
+      font-family:  "Roboto Condensed", "sans-serif";
+  }
+  body{
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+  }
+</style>
+  <body> 
 
+    <div class="stopwatch-container">
+        <div id="display">
+            00:00:00
+        </div>
 
-<body> 
-    
-    <button id="north" type="button">NORTH</button>
-    <button id="south" type="button">SOUTH</button>
-    <button id="east" type="button">EAST</button>
-    <button id="west" type="button"><a href="west_challenge.html">WEST</a></button>
+        <div class="stopwatch-buttons">
+            <button id="startStop" onclick="startStop()">Start</button> 
+        </div>
+
+    </div>
 
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/directions/json?
