--- a/findfriends.html
+++ b/findfriends.html
@@ -8,16 +8,32 @@
     crossorigin="anonymous">
     <link rel = "stylesheet" href="teststyle.css" >
   </head>
-  
+
   <body>
+    <input id="find-friends" type="button" value="FIND FRIENDS">
+    <div id="message">hi</div>
+
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/directions/json?
     origin=center&destination=
     &key=AIzaSyArVX2Pdi9UKawedXyJ8UBAJxU7QPCFFxw">
-</script>
+    </script>
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyArVX2Pdi9UKawedXyJ8UBAJxU7QPCFFxw&callback=initAutocomplete&libraries=places&v=weekly"
-      defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyArVX2Pdi9UKawedXyJ8UBAJxU7QPCFFxw&callback=initMap&libraries=localContext&v=beta"
-      defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyArVX2Pdi9UKawedXyJ8UBAJxU7QPCFFxw&callback=initAutocomplete&libraries=places&v=weekly"
+    defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyArVX2Pdi9UKawedXyJ8UBAJxU7QPCFFxw&callback=initMap&libraries=localContext&v=beta"
+    defer
     ></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+    integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+    crossorigin="anonymous"></script>
+    <script src="findfriend.js"></script>
+  </body>
+</html>
     
