--- a/cafe.html
+++ b/cafe.html
@@ -1,67 +1,62 @@
 <!DOCTYPE html>
-<html class="loginpage">
-  <head>
-    <title>Local Context Styles</title>
-    <link rel = "stylesheet" href="teststyle.css" >
-  </head>
-  <style>
-     html,
-      body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-      }
-  </style>
-  <body>
-    <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyArVX2Pdi9UKawedXyJ8UBAJxU7QPCFFxw&callback=initMap&libraries=localContext&v=beta"
-      defer
-    ></script>
-
-    
-    <p id="demo"></p>
-    <div id="map"></div>
-    <div class="popup center">
-      <div class="icon">
-        <img src="png file/star.png">
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
+  <link rel="stylesheet" href="css/style.css">
+  <title>ChatCord App</title>
+</head>
+<body>
+  <div class="chat-container">
+    <header class="chat-header">
+      <h1><i class="fas fa-smile"></i> ChatCord</h1>
+      <a href="index.html" class="btn">Leave Room</a>
+    </header>
+    <main class="chat-main">
+      <div class="chat-sidebar">
+        <h3><i class="fas fa-comments"></i> Room Name:</h3>
+        <h2 id="room-name">JavaScript</h2>
+        <h3><i class="fas fa-users"></i> Users</h3>
+        <ul id="users">
+          <li>Brad</li>
+          <li>John</li>
+          <li>Mary</li>
+          <li>Paul</li>
+          <li>Mike</li>
+        </ul>
       </div>
-      <div class="title">
-        CONGRATS!!
-      </div> 
-      <div class="description">
-        You have earned 1 star for completing your journey.
+      <div class="chat-messages">
+					<div class="message">
+						<p class="meta">Brad <span>9:12pm</span></p>
+						<p class="text">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi,
+							repudiandae.
+						</p>
+					</div>
+					<div class="message">
+						<p class="meta">Mary <span>9:15pm</span></p>
+						<p class="text">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi,
+							repudiandae.
+						</p>
+					</div>
       </div>
-      <div class="dismiss-btn">
-        <button id="dismiss-popup-btn">
-          Dismiss
-        </button>
-      </div>
+    </main>
+    <div class="chat-form-container">
+      <form id="chat-form">
+        <input
+          id="msg"
+          type="text"
+          placeholder="Enter Message"
+          required
+          autocomplete="off"
+        />
+        <button class="btn"><i class="fas fa-paper-plane"></i> Send</button>
+      </form>
     </div>
-    <div class="center">
-      <button id="open-popup-btn">
-        Finish
-      </button>
-    </div>
-    <script src="test.js"></script>
-    <script>
-        function initMap() {
+  </div>
 
-localContextMapView = new google.maps.localContext.LocalContextMapView(
-  {
-    element: document.getElementById("map"),
-    placeTypePreferences: ["cafe"],
-    maxPlaceCount: 12,
-    directionsOptions: { origin: center },
-  }
-);
-
-map = localContextMapView.map;
-new google.maps.Marker({ position: center, map: map });
-map.setOptions({
-  center: center,
-  zoom: 16,
-});
-}
-    </script>
-  </body>
+  <script src="js/main.js"></script>
+</body>
 </html>
