--- a/leaderboard.html
+++ b/leaderboard.html
@@ -16,7 +16,7 @@
     <button id="north" type="button">NORTH</button>
     <button id="south" type="button">SOUTH</button>
     <button id="east" type="button">EAST</button>
-    <button id="west" type="button"><a href="west_challenge.html">WEST</a></button>
+    <button id="np" type="button"><a href="np_challenge.html">TEAM Ngee Ann</a></button>
 
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/directions/json?
@@ -38,6 +38,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
     integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
     crossorigin="anonymous"></script>
-    <script src="leaderboard.js"></script>
   </body>
 </html>
