--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@ body, input {
 
 </style>
 <body>
-  <div class="container">
+  <div id="container" class="container">
     <div class="forms-container">
       <div class="signin-signup">
         <form class="sign-in-form">
