--- a/np_challenge.html
+++ b/np_challenge.html
@@ -3,13 +3,18 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>West Challenge Map</title>
+    <title>NP Challenge Map</title>
     <link rel= "stylesheet" href= "https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
     crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
     <link rel = "stylesheet" href="teststyle.css" >
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyArVX2Pdi9UKawedXyJ8UBAJxU7QPCFFxw&callback=initMap&libraries=&v=weekly"
+      defer
+    ></script>
   </head>
   <style> 
   html{
@@ -22,9 +27,16 @@
       justify-content: center;
       align-items: center;
   }
+  /* Set the size of the div element that contains the map */
+  #map {
+        height: 400px;
+        /* The height is 400 pixels */
+        width: 100%;
+        /* The width is the width of the web page */
+      }
 </style>
   <body> 
-
+    <div id="map"></div>
     <div class="stopwatch-container">
         <div id="display">
             00:00:00
@@ -37,16 +49,7 @@
     </div>
 
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/directions/json?
-    origin=center&destination=
-    &key=AIzaSyArVX2Pdi9UKawedXyJ8UBAJxU7QPCFFxw">
     </script>
-    <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyArVX2Pdi9UKawedXyJ8UBAJxU7QPCFFxw&callback=initAutocomplete&libraries=places&v=weekly"
-    defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyArVX2Pdi9UKawedXyJ8UBAJxU7QPCFFxw&callback=initMap&libraries=localContext&v=beta"
-    defer
-    ></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
@@ -57,5 +60,7 @@
     integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
     crossorigin="anonymous"></script>
     <script src="leaderboard.js"></script>
+    <script src="np_challenge.js"></script>
+  
   </body>
 </html>
