added latLng for np game and a stop clock + geoMrk

--- a/np_challenge.html
+++ b/np_challenge.html
@@ -43,7 +43,7 @@
         </div>
 
         <div class="stopwatch-buttons">
-            <button id="startStop" onclick="startStop()">Start</button> 
+            <button id="startStop" onclick="startStop()">START</button> 
         </div>
 
     </div>
