--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@ body, input {
   function checker(){
     if (localStorage.getItem("checkName") === localStorage.getItem("name") && localStorage.getItem("checkPassword") === localStorage.getItem("password") ){
       console.log("true");
-      window.location.href="index.html";
+      window.location.href="home.html";
 
     }
 
