--- a/forgot.html
+++ b/forgot.html
@@ -4,13 +4,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Forgot Page</title>
 <link rel = "stylesheet" href="normalize.css" >
-<link rel = "stylesheet" href="teststyle.css" >
 <script src="https://kit.fontawesome.com/64d58efce2.js">
   crossorigin="anonymous"
 </script>
 </head>
 <style>
- @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+   @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap");
   * {
   padding: 0;
   margin: 0;
@@ -408,7 +407,6 @@ body, input {
           left: 50%;
         }
       }
-
 </style>
 <body>
   <div id="container" class="container">
@@ -454,7 +452,7 @@ body, input {
         if (localStorage.getItem("newPassword") === localStorage.getItem("confirm")){
             console.log("true");
             resets();
-            window.location.href="login.html";
+            window.location.href="index.html";
         }
         else {
             console.log("false");
