--- a/bp_challenge.html
+++ b/bp_challenge.html
@@ -132,7 +132,7 @@
     <!-- TODO: Add SDKs for Firebase products that you want to use
     https://firebase.google.com/docs/web/setup#available-libraries -->
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-analytics.js"></script>
-    <script src="np_challenge.js"></script>
+    <script src="bp_challenge.js"></script>
   </body>
   
   </html>
