rotating donut animation for home page

--- a/home.html
+++ b/home.html
@@ -90,7 +90,8 @@ body{
         </div>
     </header>
     <main>
-        <img src="svg file/donut.svg">
+        <img class="donut" src="png file/donut.png">
+        <img class="donut-text" src="png file/text.png">
         <section>
             <div class="overlay"></div>
         </section>
