add icon to message pg + spelling error forgot pg

--- a/message.html
+++ b/message.html
@@ -93,6 +93,7 @@
   <main>
     <div id="messagebox" class="animate__animated animate__zoomIn">
       <div id="chat-room" class="row-col">
+        <img src="png file/cafe big.png">
         Sweet Tea
       </div>
       <!-- create a list -->
