rearrange file to be neater

--- a/html/forgot.html
+++ b/html/forgot.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Forgot Page</title>
-<link rel = "stylesheet" href="normalize.css" >
+<link rel = "stylesheet" href="css files/normalize.css" >
 <script src="https://kit.fontawesome.com/64d58efce2.js">
   crossorigin="anonymous"
 </script>
@@ -426,7 +426,7 @@ body, input {
             <i class="fas fa-lock"></i>
             <input id="confirm-password" type="password" placeholder="Confirm New Password" />
           </div>
-          <a href="login.html"><input id="back" type="submit" value="Home" class="btn solid" />
+          <a href="/html/index.html"><input id="back" type="submit" value="Home" class="btn solid" />
           </a> 
           <div id="error"></div>
         </form>
