--- a/html/atm.html
+++ b/html/atm.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" 
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
     crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
@@ -20,22 +21,28 @@
     />
     <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="teststyle.css">
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyArVX2Pdi9UKawedXyJ8UBAJxU7QPCFFxw&callback=initMap&libraries=&v=weekly"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyArVX2Pdi9UKawedXyJ8UBAJxU7QPCFFxw&callback=initMap&libraries=localContext&v=beta"
       defer
     ></script>
-    <link rel="stylesheet" href="teststyle.css">
-	
     <style type="text/css">
-      /* Set the size of the div element that contains the map */
+      /* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
       #map {
-        height: 615px;
-        /* The height is 400 pixels */
-        /* The width is the width of the web page */
-        padding: 10px;
+        height: 700px;
       }
 
-	</style>
+      /* Optional: Makes the sample page fill the window. */
+      html,
+      body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+    </style>
+
   </head>
   <body>
 
@@ -52,39 +59,39 @@
                 <div class="nav-links">
                     <ul>
                         <li class="nav-link" style="--i: .6s">
-                            <a href="home.html">HOME<i class="fas fa-caret-down"></i></a>
+                            <a href="/html/home.html">HOME<i class="fas fa-caret-down"></i></a>
                         </li>
                         <li class="nav-link" style="--i: .85s">
                           <a href="#">SWEET-SPOTS<i class="fas fa-caret-down"></i></a>
                           <div class="dropdown">
                             <ul>
                                 <li class="dropdown-link">
-                                    <a href="restaurant.html">RESTAURANTS</a>
+                                    <a href="/html/restaurant.html">RESTAURANTS</a>
                                 </li>
                                 <li class="dropdown-link">
-                                  <a href="atm.html">ATMS</a>
+                                  <a href="/html/atm.html">ATMS</a>
                               </li>
                               <li class="dropdown-link">
-                                <a href="cafe.html">CAFES</a>
+                                <a href="/html/cafe.html">CAFES</a>
                             </li>
                                 <div class="arrow"></div>
                             </ul>
                         </div>
                       </li>
                         <li class="nav-link" style="--i: .85s">
-                            <a href="message.html">WHATS THE TEA SIS?<i class="fas fa-caret-down"></i></a>
+                            <a href="/html/message.html">WHATS THE TEA SIS?<i class="fas fa-caret-down"></i></a>
                         </li>
                         <li class="nav-link" style="--i: 1.1s">
-                            <a href="np_challenge.html">SWEET-VENTURE<i class="fas fa-caret-down"></i></a>
+                            <a href="/html/np_challenge.html">SWEET-VENTURE<i class="fas fa-caret-down"></i></a>
                         </li>
                         <li class="nav-link" style="--i: 1.35s">
-                            <a href="scoreboard.html">LEADERBOARD<i class="fas fa-caret-down"></i></a>
+                            <a href="/html/scoreboard.html">LEADERBOARD<i class="fas fa-caret-down"></i></a>
                         </li>
                     </ul>
                 </div>
   
                 <div class="log-sign" style="--i: 1.6s">
-                    <a href="index.html" class="btn transparent">Log in</a>
+                    <a href="/html/index.html" class="btn transparent">Log in</a>
                 </div>
             </div>
   
@@ -97,15 +104,6 @@
       </header>
       <main class="animate__animated animate__slideInLeft">
         <div id="map"></div>
-        <div class="stopwatch-container">
-            <div id="display">
-              00:00:00
-          </div>
-          <div class="stopwatch-buttons">
-                <button id="startStop" onclick="startStop()"><i class="fa fa-play-circle-o" aria-hidden="true"></i></button>
-                <button id="startStop" onclick="reset()"><i class="fa fa-stop-circle-o" aria-hidden="true"></i></button>
-            </div>
-        </div>
           <section>
               <div class="overlay"></div>
           </section>
@@ -123,7 +121,43 @@
     <!-- TODO: Add SDKs for Firebase products that you want to use
     https://firebase.google.com/docs/web/setup#available-libraries -->
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-analytics.js"></script>
-    <script src="np_challenge.js"></script>
+    <script>
+      // get user's location: 
+      sucessCallback = (position) => {
+      var latitude = localStorage.setItem("latitude", position.coords.latitude);
+      var longitude = localStorage.setItem("longitude", position.coords.longitude);
+      }
+
+      errorCallback = (error) => {
+      console.log(error);
+      }
+
+      navigator.geolocation.getCurrentPosition(sucessCallback, errorCallback);
+
+      let latitude = parseFloat(localStorage.getItem("latitude"));
+      let longitude = parseFloat(localStorage.getItem("longitude"));
+
+      // get map: 
+      let map;
+
+      function initMap() {
+      const center = { lat: latitude, lng: longitude };
+      const localContextMapView = new google.maps.localContext.LocalContextMapView(
+      {
+      element: document.getElementById("map"),
+      placeTypePreferences: ["atm"],
+      maxPlaceCount: 12,
+      directionsOptions: { origin: center },
+      }
+      );
+      map = localContextMapView.map;
+      new google.maps.Marker({ position: center, map: map });
+      map.setOptions({
+      center: center,
+      zoom: 16,
+      });
+      }
+    </script>
   </body>
   
   </html>
