--- a/html/cafe.html
+++ b/html/cafe.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" 
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
     crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
@@ -58,39 +59,39 @@
                 <div class="nav-links">
                     <ul>
                         <li class="nav-link" style="--i: .6s">
-                            <a href="home.html">HOME<i class="fas fa-caret-down"></i></a>
+                            <a href="/html/home.html">HOME<i class="fas fa-caret-down"></i></a>
                         </li>
                         <li class="nav-link" style="--i: .85s">
                           <a href="#">SWEET-SPOTS<i class="fas fa-caret-down"></i></a>
                           <div class="dropdown">
                             <ul>
                                 <li class="dropdown-link">
-                                    <a href="restaurant.html">RESTAURANTS</a>
+                                    <a href="/html/restaurant.html">RESTAURANTS</a>
                                 </li>
                                 <li class="dropdown-link">
-                                  <a href="atm.html">ATMS</a>
+                                  <a href="/html/atm.html">ATMS</a>
                               </li>
                               <li class="dropdown-link">
-                                <a href="cafe.html">CAFES</a>
+                                <a href="/html/cafe.html">CAFES</a>
                             </li>
                                 <div class="arrow"></div>
                             </ul>
                         </div>
                       </li>
                         <li class="nav-link" style="--i: .85s">
-                            <a href="message.html">WHATS THE TEA SIS?<i class="fas fa-caret-down"></i></a>
+                            <a href="/html/message.html">WHATS THE TEA SIS?<i class="fas fa-caret-down"></i></a>
                         </li>
                         <li class="nav-link" style="--i: 1.1s">
-                            <a href="np_challenge.html">SWEET-VENTURE<i class="fas fa-caret-down"></i></a>
+                            <a href="/html/np_challenge.html">SWEET-VENTURE<i class="fas fa-caret-down"></i></a>
                         </li>
                         <li class="nav-link" style="--i: 1.35s">
-                            <a href="scoreboard.html">LEADERBOARD<i class="fas fa-caret-down"></i></a>
+                            <a href="/html/scoreboard.html">LEADERBOARD<i class="fas fa-caret-down"></i></a>
                         </li>
                     </ul>
                 </div>
   
                 <div class="log-sign" style="--i: 1.6s">
-                    <a href="index.html" class="btn transparent">Log in</a>
+                    <a href="/html/index.html" class="btn transparent">Log in</a>
                 </div>
             </div>
   
