--- a/html/home.html
+++ b/html/home.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="/css/style.css">
     <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Home</title>
@@ -38,39 +39,39 @@ body{
                 <div class="nav-links">
                     <ul>
                         <li class="nav-link" style="--i: .6s">
-                            <a href="home.html">HOME<i class="fas fa-caret-down"></i></a>
+                            <a href="/html/home.html">HOME<i class="fas fa-caret-down"></i></a>
                         </li>
                         <li class="nav-link" style="--i: .85s">
                           <a href="#">SWEET-SPOTS<i class="fas fa-caret-down"></i></a>
                           <div class="dropdown">
                             <ul>
                                 <li class="dropdown-link">
-                                    <a href="restaurant.html">RESTAURANTS</a>
+                                    <a href="/html/restaurant.html">RESTAURANTS</a>
                                 </li>
                                 <li class="dropdown-link">
-                                  <a href="atm.html">ATMS</a>
+                                  <a href="/html/atm.html">ATMS</a>
                               </li>
                               <li class="dropdown-link">
-                                <a href="cafe.html">CAFES</a>
+                                <a href="/html/cafe.html">CAFES</a>
                             </li>
                                 <div class="arrow"></div>
                             </ul>
                         </div>
                       </li>
                         <li class="nav-link" style="--i: .85s">
-                            <a href="message.html">WHATS THE TEA SIS?<i class="fas fa-caret-down"></i></a>
+                            <a href="/html/message.html">WHATS THE TEA SIS?<i class="fas fa-caret-down"></i></a>
                         </li>
                         <li class="nav-link" style="--i: 1.1s">
-                            <a href="np_challenge.html">SWEET-VENTURE<i class="fas fa-caret-down"></i></a>
+                            <a href="/html/np_challenge.html">SWEET-VENTURE<i class="fas fa-caret-down"></i></a>
                         </li>
                         <li class="nav-link" style="--i: 1.35s">
-                            <a href="scoreboard.html">LEADERBOARD<i class="fas fa-caret-down"></i></a>
+                            <a href="/html/scoreboard.html">LEADERBOARD<i class="fas fa-caret-down"></i></a>
                         </li>
                     </ul>
                 </div>
   
                 <div class="log-sign" style="--i: 1.6s">
-                    <a href="index.html" class="btn transparent">Log in</a>
+                    <a href="/html/index.html" class="btn transparent">Log in</a>
                 </div>
             </div>
 
@@ -82,8 +83,8 @@ body{
         </div>
     </header>
     <main>
-        <img class="donut" src="png file/donut.png">
-        <img class="donut-text" src="png file/text.png">
+        <img class="donut" src="/png file/donut.png">
+        <img class="donut-text" src="/png file/text.png">
         <section>
             <div class="overlay"></div>
         </section>
