--- a/html/np_challenge.html
+++ b/html/np_challenge.html
@@ -5,13 +5,14 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Messaging Form </title>
+    <title>NP race </title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" 
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
     crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
@@ -52,39 +53,39 @@
                 <div class="nav-links">
                     <ul>
                         <li class="nav-link" style="--i: .6s">
-                            <a href="home.html">HOME<i class="fas fa-caret-down"></i></a>
+                            <a href="/html/home.html">HOME<i class="fas fa-caret-down"></i></a>
                         </li>
                         <li class="nav-link" style="--i: .85s">
                           <a href="#">SWEET-SPOTS<i class="fas fa-caret-down"></i></a>
                           <div class="dropdown">
                             <ul>
                                 <li class="dropdown-link">
-                                    <a href="restaurant.html">RESTAURANTS</a>
+                                    <a href="/html/restaurant.html">RESTAURANTS</a>
                                 </li>
                                 <li class="dropdown-link">
-                                  <a href="atm.html">ATMS</a>
+                                  <a href="/html/atm.html">ATMS</a>
                               </li>
                               <li class="dropdown-link">
-                                <a href="cafe.html">CAFES</a>
+                                <a href="/html/cafe.html">CAFES</a>
                             </li>
                                 <div class="arrow"></div>
                             </ul>
                         </div>
                       </li>
                         <li class="nav-link" style="--i: .85s">
-                            <a href="message.html">WHATS THE TEA SIS?<i class="fas fa-caret-down"></i></a>
+                            <a href="/html/message.html">WHATS THE TEA SIS?<i class="fas fa-caret-down"></i></a>
                         </li>
                         <li class="nav-link" style="--i: 1.1s">
-                            <a href="np_challenge.html">SWEET-VENTURE<i class="fas fa-caret-down"></i></a>
+                            <a href="/html/np_challenge.html">SWEET-VENTURE<i class="fas fa-caret-down"></i></a>
                         </li>
                         <li class="nav-link" style="--i: 1.35s">
-                            <a href="scoreboard.html">LEADERBOARD<i class="fas fa-caret-down"></i></a>
+                            <a href="/html/scoreboard.html">LEADERBOARD<i class="fas fa-caret-down"></i></a>
                         </li>
                     </ul>
                 </div>
   
                 <div class="log-sign" style="--i: 1.6s">
-                    <a href="index.html" class="btn transparent">Log in</a>
+                    <a href="/html/index.html" class="btn transparent">Log in</a>
                 </div>
             </div>
   
@@ -97,19 +98,33 @@
       </header>
       <main class="animate__animated animate__slideInLeft">
         <div id="map"></div>
-        <div class="key">
-          <h2>KEY:</h2>
-          <ul class="legend">
-            <li><img src="png file/person icon.png"> Your location</li>
-            <li><img src="png file/cafe star.png"> Friend's location</li>
-          </ul>
+        <div class="stopwatch-container">
+            <div id="display">
+              00:00:00
+          </div>
+          <div class="stopwatch-buttons">
+                <button id="startStop" onclick="startStop()"><i class="fa fa-play-circle-o" aria-hidden="true"></i></button>
+                <button id="startStop" onclick="reset()"><i class="fa fa-stop-circle-o" aria-hidden="true"></i></button>
+            </div>
         </div>
           <section>
               <div class="overlay"></div>
           </section>
       </main>
-    	<script src="findfriend.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    </script>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
+
+    <!-- include firebase firestore -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-firestore.js"></script>
+
+    <!-- include firebase database -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-database.js"></script>
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+    https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-analytics.js"></script>
+    <script src="/js/np_challenge.js"></script>
   </body>
   
   </html>
-
