--- a/html/scoreboard.html
+++ b/html/scoreboard.html
@@ -11,7 +11,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" 
   integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
   crossorigin="anonymous">
- <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/css/normalize.css">
+ <link rel="stylesheet" href="/css/style.css">
  <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link
@@ -40,39 +41,39 @@
             <div class="nav-links">
                 <ul>
                     <li class="nav-link" style="--i: .6s">
-                        <a href="home.html">HOME<i class="fas fa-caret-down"></i></a>
+                        <a href="/html/home.html">HOME<i class="fas fa-caret-down"></i></a>
                     </li>
                     <li class="nav-link" style="--i: .85s">
                       <a href="#">SWEET-SPOTS<i class="fas fa-caret-down"></i></a>
                       <div class="dropdown">
                         <ul>
                             <li class="dropdown-link">
-                                <a href="restaurant.html">RESTAURANTS</a>
+                                <a href="/html/restaurant.html">RESTAURANTS</a>
                             </li>
                             <li class="dropdown-link">
-                              <a href="atm.html">ATMS</a>
+                              <a href="/html/atm.html">ATMS</a>
                           </li>
                           <li class="dropdown-link">
-                            <a href="cafe.html">CAFES</a>
+                            <a href="/html/cafe.html">CAFES</a>
                         </li>
                             <div class="arrow"></div>
                         </ul>
                     </div>
                   </li>
                     <li class="nav-link" style="--i: .85s">
-                        <a href="message.html">WHATS THE TEA SIS?<i class="fas fa-caret-down"></i></a>
+                        <a href="/html/message.html">WHATS THE TEA SIS?<i class="fas fa-caret-down"></i></a>
                     </li>
                     <li class="nav-link" style="--i: 1.1s">
-                        <a href="np_challenge.html">SWEET-VENTURE<i class="fas fa-caret-down"></i></a>
+                        <a href="/html/np_challenge.html">SWEET-VENTURE<i class="fas fa-caret-down"></i></a>
                     </li>
                     <li class="nav-link" style="--i: 1.35s">
-                        <a href="scoreboard.html">LEADERBOARD<i class="fas fa-caret-down"></i></a>
+                        <a href="/html/scoreboard.html">LEADERBOARD<i class="fas fa-caret-down"></i></a>
                     </li>
                 </ul>
             </div>
 
             <div class="log-sign" style="--i: 1.6s">
-                <a href="index.html" class="btn transparent">Log in</a>
+                <a href="/html/index.html" class="btn transparent">Log in</a>
             </div>
         </div>
 
@@ -94,27 +95,27 @@
       </thead>
       <tbody>
         <tr class="first">
-          <td><strong><img src="png file/trophy.png"></strong></td>
+          <td><strong><img src="/png file/trophy.png"></strong></td>
           <td><div id="firstName"></div></td>
           <td><div id="first"></div></td>
         </tr>
         <tr class="second">
-          <td><img src="png file/2nd medal.png"></td>
+          <td><img src="/png file/2nd medal.png"></td>
           <td><div id="secondName"></div></td>
           <td><div id="second"></div></td>
         </tr>
         <tr class="third">
-          <td><img src="png file/3rd medal.png"></td>
+          <td><img src="/png file/3rd medal.png"></td>
           <td><div id="thirdName"></div></td>
           <td><div id="third"></div></td>
         </tr>
         <tr class="forth">
-          <td><img src="png file/4th medal.png"></td>
+          <td><img src="/png file/4th medal.png"></td>
           <td><div id="forthName"></div></td>
           <td><div id="forth"></div></td>
         </tr>
           <tr class="fifth">
-          <td><img src="png file/5th medal.png"></td>
+          <td><img src="/png file/5th medal.png"></td>
           <td><div id="fifthName"></div></td>
           <td><div id="fifth"></div></td>
         </tr>
@@ -150,7 +151,7 @@
   integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" 
   crossorigin="anonymous">
   </script>
-  <script src="scoreboard.js"></script>
+  <script src="/js/scoreboard.js"></script>
 </body>
 
 </html>
