unsure why page cannot be excessed anymore testing

--- a/html/home.html
+++ b/html/home.html
@@ -71,7 +71,7 @@ body{
                 </div>
   
                 <div class="log-sign" style="--i: 1.6s">
-                    <a href="/html/index.html" class="btn transparent">Log in</a>
+                    <a href="index.html" class="btn transparent">Log in</a>
                 </div>
             </div>
 
